<resources>
<!--    //dummy-->
<!--    <string name="api_key">0fb98274770a4703a4c0f489cc5d6fc</string>-->


    <string name="api_key">0fb98274770a4703a4c0f489cc56dd6f</string>

<!--    //key alternatif-->
<!--    <string name="api_key">0251f6d7f0c24a9881e2205c800df3d6</string>-->

    <string name="app_name">RecipeApp</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_name">Dish Name</string>

    <string name="_2_person">2 Person</string>

    <string name="time">Time</string>

    <string name="like">Like</string>
    <string name="title_activity_walkthrough">WalkthroughActivity</string>
    <string name="_1_pc">1 pc</string>
    <string name="chicken">Chicken</string>
    <string name="dessert">Dessert</string>
    <string name="menu">Menu</string>
    <string name="similar_name">Similar Name</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="source">Source</string>
    <string name="summary">Summary</string>
    <string name="item">Item</string>
    <string name="no">1</string>
    <string name="similar_recipe">Similar Recipe</string>
    <string name="instruction">Instruction</string>
    <string name="step_name">Step Name</string>
    <string name="equipment">Equipment</string>
    <string name="ingredients">Ingredients</string>
    <string name="next">Next</string>
    <string name="cooking_a">Cooking a</string>
    <string name="delicious_food">Delicious Food</string>
    <string name="easily">Easily</string>
    <string name="dicsovery_more_than_1200_food">Dicsovery more than 1200 food</string>
    <string name="recipes_in_you_hands_and_cooking">recipes in you hands and cooking</string>
    <string name="it_easily">it easily!</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>


    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
</resources>