<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


<!--    <ImageView-->
<!--        android:id="@+id/image_pizza"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:srcCompat="@drawable/ic_pizza"-->
<!--        android:scaleType="centerCrop"-->
<!--        tools:ignore="MissingConstraints" />-->


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="31dp"
        android:gravity="center"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cooking_a"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delicious_food"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easily"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dicsovery_more_than_1200_food"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipes_in_you_hands_and_cooking"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/it_easily"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>