<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_instruction_step_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/textView_instruction_step_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:padding="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipment"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_instruction_equipments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_instruction_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>