<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/random_list_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp"
    android:layout_margin="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dish_name"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:textStyle="bold"
            android:scrollHorizontally="true"
            android:textSize="22sp"
            android:padding="8dp"/>

        <ImageView
            android:id="@+id/imageView_food"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">


            <LinearLayout
                android:id="@+id/list_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_serving"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView_servings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_person"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_like"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>